Corrected spacing  issue on all banner

--- a/assets/css/pages/_home.css
+++ b/assets/css/pages/_home.css
@@ -5,7 +5,7 @@
 		@apply w-full;
 	}
 	&__content {
-		@apply absolute z-10 top-[100px] left-1/2 translate-x-[-50%] text-center w-full;
+		@apply absolute z-10 top-[200px] left-1/2 translate-x-[-50%] text-center w-full;
 		&--alt {
 			@apply max-w-[1240px] text-start top-[35%];
 		}
@@ -24,6 +24,14 @@
 /*===| Services CSS  End |===*/
 
 /*===| Who Serve CSS  End |===*/
+
+@media only screen and (max-width: 1240px) {
+	.hero {
+		&__content {
+			top: 100px;
+		}
+	}
+}
 
 @media only screen and (max-width: 992px) {
 	.hero {
